[package]
name = "trace_prestate"
version = "0.1.0"
edition = "2024"

[dependencies]
op-revm = "10.1.0"
revm = "29.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
